[package]
name = "twitch_oauth_token"
version = "4.0.1"
edition = "2021"
description = "Type-safe Twitch OAuth 2.0 authentication library with CSRF protection and full scope support"
documentation = "https://docs.rs/twitch_oauth_token"
repository = "https://github.com/m3idnotfree/twitch_oauth.git"
license = "MIT OR Apache-2.0"
keywords = ["api", "authentication", "oauth", "oauth2", "twitch"]
categories = ["api-bindings", "authentication", "web-programming"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[example]]
name = "app-token"
path = "examples/app_token.rs"

[[example]]
name = "user-token"
path = "examples/user_token.rs"

[[example]]
name = "oneshot"
path = "examples/oneshot.rs"
required-features = ["oneshot"]

[dependencies]
asknothingx2-util = { version = "0.4.1", features = [
  "api",
  "oauth",
] }
base64 = "0.22.1"
chrono = { version = "0.4.44", features = ["serde"] }
hex = "0.4.3"
hmac = "0.12.1"
http-serde = "2.1.1"
rand = "0.10.0"
reqwest = "0.13.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_urlencoded = "0.7.1"
sha2 = "0.10.9"
url = "2.5.8"

[dev-dependencies]
anyhow = "1.0.102"
axum = "0.8.8"
axum-extra = { version = "0.12.5", features = ["typed-header"] }
dotenvy = "0.15.7"
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
wiremock = "0.6.5"

[features]
default = []
full = ["oneshot", "test"]
oneshot = ["asknothingx2-util/oauth-server"]
test = []
